Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.3.30 - unreleased

	Tom Collins
	- Install a vlimits.default file if none exists.
	- Allow for comments in vlimits.default and .qmailadmin-limits.

5.3.29 - 20-Oct-03

	Michael Bowe
	- Fix formatting error in tcp.smtp.tmp.pid filename
	  (was being created as tcp.smtptmp.pid).

	Tom Collins
	- Remove acconfig.h; update configure.in to work without it.
	- Update 'missing' script with version from automake 1.6.
	- Send errors to stderr instead of stdout (vpopmail, vchkpw).
	- Add support for port 587 (submission) to vchkpw.
	- Increase size of VchkpwLogName in vchkpw.c to eliminate a
	  buffer overflow.
	- Improve seeding for rand() and random() in vpopmail.c
	- Add -r (random password) option to vpasswd.
	- Better detection of connection type in vchkpw.c. [818943]
	- Remove extraneous calls to mysql_store_result(). [809472]
	- Minor cleanup of make_user_dir() in vpopmail.c.
	- Don't prompt for password in `vadduser -e ...`. [822308]
	- Set quota to default when adding new users. [821995]
	- vpgsql.c vauth_getpw(): Put in_domain on the stack. [822175]
	- Fix vget_limits calls. [824067, 824070]
	- Update example for --enable-tcpserver-file in configure. [824077]
	- Fix loop checking on Delivered-To header. [826231]

	Justin Heeseman
	- Set pw_flags field based on pw_gid and domain limits. [795688]
	- Use pw_flags instead of pw_gid to check permissions.
	- Allow K/KB/M/MB modifiers on vmoddomlimits -Q. [821892]

5.3.28 - released 3-Oct-03

	Michael Bowe
	- Remove vget_real_domain() declaration from vpopmail.h. [800738]
	- Fix compile errors with vpgsql.c. [801528]
	- Add code to configure.in to search for pg_config. [801528]
	- Re-add vget_real_domain() to vpopmail.h and vpopmail.c [800738]

	Oden Eriksson
	- Fix wrapped line in contrib/qmail-maildir++.patch.

	Tom Collins